Add all information in html

--- a/index.html
+++ b/index.html
@@ -8,35 +8,40 @@
     <body>
         <div class="header">
             <div class="logo">Header Logo</div>
-                <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
-                </ul>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
         </div>
 
         <div class="content">
             <div class="first-section">
-                <div class="subheader-text">
-                    <div class="main-title">This website is awesome</div>
-                    <div class="main-info">This website has some subtext that goes here uner the main title. It's a smaller font an the color is lower contrast.</div>
-                    <div class="button">Sign up</div>
+                <div class="hero">
+                    <div class="hero-title">This website is awesome</div>
+                    <div class="text">This website has some subtext that goes here uner the main title. It's a smaller font an the color is lower contrast.</div>
+                    <button class="signup">Sign up</button>
                 </div>
                 <div class="placeholder">this is a placeholder for an image
 
                 </div>
             </div>
             <div class="second-section">
-                Hello world
+                <div class="info-header">Some random information.</div>
+                <div class="info-content">
+                    <div class="info-boxes"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
             </div>
             <div class="third-section">
                 <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                -Thor, God of Thunder
             </div>
-            <div class="fourth-section">
-                Hello
+            <div class="fourth-section">Call to action! It's time!
+                <div class="text">Sign up for our product by clicking that button right over there!</div>
+                <button class="signup">Sign up</button>
             </div>
         </div>
-
         <div class="footer">Copyright © The Odin Project 2021</div>
     </body>
 </html>
