--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
             <div class="first-section">
                 <div class="hero">
                     <div class="hero-title">This website is awesome</div>
-                    <div class="text">This website has some subtext that goes here uner the main title. It's a smaller font an the color is lower contrast.</div>
+                    <div class="text">This website has some subtext that goes here under the main title. It's a smaller font an the color is lower contrast</div>
                     <button class="signup">Sign up</button>
                 </div>
-                <div class="placeholder">this is a placeholder for an image
-
-                </div>
+                <div class="placeholder">this is a placeholder for an image</div>
             </div>
             <div class="second-section">
                 <div class="info-header">Some random information.</div>
@@ -37,8 +35,10 @@
                 <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
                 -Thor, God of Thunder
             </div>
-            <div class="fourth-section">Call to action! It's time!
-                <div class="text">Sign up for our product by clicking that button right over there!</div>
+            <div class="fourth-section">
+                <div class="modal">Call to action! It's time!
+                    <div class="text">Sign up for our product by clicking that button right over there!</div>
+                </div>
                 <button class="signup">Sign up</button>
             </div>
         </div>
