--- a/index.html
+++ b/index.html
@@ -27,8 +27,22 @@
             <div class="second-section">
                 <div class="info-header">Some random information.</div>
                 <div class="info-content">
-                    <div class="info-boxes"></div>
-                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="info-box">
+                        <div class="box"></div>
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info-box">
+                        <div class="box"></div>
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info-box">
+                        <div class="box"></div>
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info-box">
+                        <div class="box"></div>
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
                 </div>
             </div>
             <div class="third-section">
