--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="second-section">
                 <div class="info-header">Some random information.</div>
                 <div class="info-content">
-                    <div class="info-box">
+                    <div class="info">
                         <div class="box"></div>
                         <div class="text">this is some subtext under an illustration or image</div>
                     </div>
