--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
                         <div class="box"></div>
                         <div class="text">this is some subtext under an illustration or image</div>
                     </div>
+                    <div class="info">
+                        <div class="box"></div>
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info">
+                        <div class="box"></div>
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info">
+                        <div class="box"></div>
+                        <div class="text">this is some subtext under an illustration or image</div>
+                    </div>
                 </div>
             </div>
             <div class="third-section">
