--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="third-section">
                 <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-                -Thor, God of Thunder
+                <div class="author">-Thor, God of Thunder</div>
             </div>
             <div class="fourth-section">
                 <div class="modal">Call to action! It's time!
