Style modal in fourth section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="header">
-            <div class="logo">Header Logo</div>
+            <div class="logo"><a href="#">Header Logo</a></div>
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
@@ -20,7 +20,7 @@
                 <div class="hero">
                     <div class="hero-title">This website is awesome</div>
                     <div class="text">This website has some subtext that goes here under the main title. It's a smaller font an the color is lower contrast</div>
-                    <button class="signup">Sign up</button>
+                    <button class="signup"><a href="#">Sign up</a></button>
                 </div>
                 <div class="placeholder">this is a placeholder for an image</div>
             </div>
@@ -50,10 +50,11 @@
                 <div class="author">-Thor, God of Thunder</div>
             </div>
             <div class="fourth-section">
-                <div class="modal">Call to action! It's time!
+                <div>
+                    <div class="modal-title">Call to action! It's time!</div>
                     <div class="text">Sign up for our product by clicking that button right over there!</div>
                 </div>
-                <button class="signup">Sign up</button>
+                <button class="signup"><a href="#">Sign up</a></button>
             </div>
         </div>
         <div class="footer">Copyright © The Odin Project 2021</div>
