Link font style to html
Linked the font style Roboto to html. Import URL in CSS is removed.
Because importing the URL to CSS makes website load slower --StackOverflow--.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Landing Page</title>
         <link rel="stylesheet" href="./style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="header">
